# CheckedCmd

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml
CMake/: clara.cmake
Tests/: ArgumentsTest.cpp  CMakeLists.txt  TestMain.cpp
include/: checked_cmd.h
